--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -10,6 +10,14 @@
     height: 100vh;
     width: 100vw;
 
+    &__container
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding-bottom: 4rem; // Compensates for the <OptionsBar>.
+    }
+
     &__translator
     {
         display: flex;
