--- a/src/scss/components/_textbox.scss
+++ b/src/scss/components/_textbox.scss
@@ -72,7 +72,7 @@
             scrollbar-width: thin;
         }
     
-        @include tablet-large-layout() 
+        @include laptop-layout() 
         {
             height: 30vh;
             width: 90vw;
