--- a/src/scss/components/_options-bar.scss
+++ b/src/scss/components/_options-bar.scss
@@ -46,9 +46,6 @@
         padding: 0.25rem 0.5rem;
         gap: 0.5rem;
 
-        @include border-lighting(dark, mid-neutral, soft-neutral);
-        background-color: color-dark(bg-secondary);
-
         @include mobile-small-layout() 
         {
             justify-content: center;
@@ -79,6 +76,12 @@
             min-height: 1.15rem; 
             max-width: 1.15rem;
             max-height: 1.15rem; 
+        }
+
+        &--inactive
+        {
+            @include border-lighting(dark, mid-neutral, soft-neutral);
+            background-color: color-dark(bg-secondary);
         }
 
         &--active 
