--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -35,4 +35,22 @@
             flex-direction: column;
         }
     }
+
+    &__credits
+    {
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 2.5em;
+        position: fixed;
+        text-align: center;
+        font-size: 0.8rem;
+        margin-top: 0.5rem;
+        color: color-dark(text-white);
+
+        & a 
+        {
+            color: color-dark(text-off-white);
+        }
+    }
 }
