<div contentEditable> fix.
The 'contentEditable' was removed (since it was causing issues with
React) and the <div> was made to behave (visually) like a <textarea>
for consistency's sake, since it's text doesn't/shouldn't be manually
editted by the user anyway.

--- a/src/scss/components/_textbox.scss
+++ b/src/scss/components/_textbox.scss
@@ -19,6 +19,8 @@
 
         background-color: color-dark(bg-secondary);
         color: color-dark(text-secondary);
+        user-select: 'text';
+        cursor: text;
 
         & a 
         {
@@ -29,6 +31,13 @@
         &::placeholder
         {
             font-family: monospace, sans-serif;
+        }
+
+        &:focus
+        {
+            outline: 1px solid;
+            outline-color: white;
+            outline-offset: 2px;
         }
 
         &:hover, &:focus 
