--- a/src/scss/components/_options-entry.scss
+++ b/src/scss/components/_options-entry.scss
@@ -21,11 +21,20 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-direction: column;
         list-style: none;
         padding: 1rem;
         width: 100%;
         gap: 0.5rem;
+        
+        &--text
+        {
+            flex-direction: column;
+        }
+
+        &--buttons
+        {
+            flex-direction: row;
+        }
     }
 
     &__item
@@ -108,6 +117,40 @@
             {
                 display: none;
             }
+        }
+    }
+
+    &__button
+    {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0.4rem;
+        height: 2.25rem;
+        width: 2.25rem;
+
+        @include border-lighting(dark, strong-neutral, soft-neutral);
+        background-color: color-dark(bg-quaternary);
+        color: color-dark(text-white);
+        font-family: monospace;
+        font-size: 1rem;
+
+        &--active
+        {
+            @include border-lighting(dark, soft-neutral, strong-neutral);
+            background-color: color-dark(bg-secondary);
+        }
+
+        &--inactive
+        {
+            @include border-lighting(dark, strong-neutral, soft-neutral);
+            background-color: color-dark(bg-quaternary);
+        }
+
+        &:hover 
+        {
+            background-color: color-dark(bg-tertiary);
         }
     }
 }
