Textarea horizontal overflow fix.
Very long single-line Templates could, at times, cause an x-axis
overflow in the textarea, which wouldn't get wrapped because of no
white-space). Now, it'll be forcefully wrapped by break-word.

--- a/src/scss/components/_textbox.scss
+++ b/src/scss/components/_textbox.scss
@@ -12,6 +12,7 @@
         width: 39vw;
         height: 51vh;
         font-family: monospace;
+        overflow-wrap: break-word;
         font-size: 1rem;
         line-height: 1.6;
         padding: 0.5rem;
